--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ import groovyx.net.http.ContentType
 import groovyx.net.http.HTTPBuilder
 import groovyx.net.http.Method
 import groovyx.net.http.ParserRegistry
-import proguard.gradle.ProGuardTask
+import de.undercouch.gradle.tasks.download.Download
 
 buildscript {
   repositories {
@@ -18,7 +18,6 @@ buildscript {
   dependencies {
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
     classpath 'com.install4j:gradle-plugin:6.0'
-    classpath 'net.sf.proguard:proguard-gradle:5.2.1'
   }
 }
 
@@ -26,9 +25,11 @@ plugins {
   id "org.sonarqube" version "1.0"
   id "com.install4j.gradle" version "6.1.1"
   id "co.riiid.gradle" version "0.4.2"
+  id "de.undercouch.download" version "3.1.2"
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'distribution'
@@ -126,6 +127,18 @@ jacocoTestReport {
   }
 }
 
+idea {
+  project {
+    jdkName = JavaVersion.VERSION_1_8
+    languageLevel = JavaVersion.VERSION_1_8
+    vcs = 'Git'
+  }
+  module {
+    downloadJavadoc = false
+    downloadSources = true
+  }
+}
+
 jar {
   manifest {
     attributes "Premain-Class": "com.faforever.client.fx.TransparentWebViewPatch",
@@ -142,14 +155,6 @@ distributions {
       from { [configurations.runtime, file('src/main/native'), jar] }
     }
   }
-}
-
-task proguardJar(type: ProGuardTask) {
-  dependsOn 'jar'
-  configuration 'proguard.txt'
-
-  injars(jar.archivePath.getPath())
-  outjars(libsDir.path + project.name + '_obfuscated.jar')
 }
 
 install4j {
@@ -190,6 +195,12 @@ task githubRelease(type: ReleaseTask, overwrite: true) {
       assets = buildAssetList()
     }
   }
+}
+
+task downloadIceAdapter(type: Download) {
+  mustRunAfter 'assemble'
+  src "https://github.com/FAForever/ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter.exe"
+  dest file("${buildDir}/resources/native")
 }
 
 task wrapper(type: Wrapper) {
@@ -249,6 +260,7 @@ dependencies {
   compile 'org.apache.lucene:lucene-core:5.3.1'
   compile 'org.apache.lucene:lucene-analyzers-common:5.3.1'
   compile 'org.apache.lucene:lucene-suggest:5.3.1'
+  compile 'org.opentelecoms.ice:ice4j-fork:1.0+f.4'
   compile 'com.nativelibs4java:bridj:0.7.0'
   compile 'com.github.nocatch:nocatch:1.1'
   compile 'org.javassist:javassist:3.20.0-GA'
